--- a/resources/assets/sass/variables/_typography.scss
+++ b/resources/assets/sass/variables/_typography.scss
@@ -4,6 +4,7 @@ $fonts: (
   script                : #{'spumante', script},
   paragraph             : #{'proxima-nova', 'Helvetica Neue', Helvetica, Arial, sans-serif},
   headings              : #{'proxima-nova-extra-condensed', 'Helvetica Neue', Helvetica, Arial, sans-serif},
+  mono                  : #{"fira-mono", Monaco, monospace},
 );
 
 $font-size-base: 0.9rem;
