--- a/resources/assets/sass/variables/_typography.scss
+++ b/resources/assets/sass/variables/_typography.scss
@@ -7,6 +7,6 @@ $fonts: (
   mono                  : #{"fira-mono", Monaco, monospace},
 );
 
-$font-size-base: 0.9rem;
+//$font-size-base: 0.9rem;
 
-$line-height-base: 1.6;
+//$line-height-base: 1.6;
