--- a/resources/assets/sass/_layout.scss
+++ b/resources/assets/sass/_layout.scss
@@ -140,12 +140,21 @@ header a {
     left: 50%;
     top: 10%;
     font-family: font(script);
+    font-size: 1.5em;
     color: #ffffff;
     text-indent: 1em;
+    text-shadow: 2px 2px 14px rgba(color(bg-abs), 0.50);
+
+    @include media-breakpoint-up(sm) {
+      font-size: 2.5em;
+    } // media-breakpoint-up(sm)
+
+    @include media-breakpoint-up(lg) {
+      font-size: 3.0em;
+    } // media-breakpoint-up(lg)
 
     @include media-breakpoint-up(xl) {
       font-size: 3.5em;
-      text-shadow: 2px 2px 14px rgba(color(bg-abs), 0.5);
     } // media-breakpoint-up(xl)
   } // h1
 } // #splash
@@ -327,7 +336,7 @@ header a {
 
   p,
   li {
-    font-size: 0.75rem;
+    font-size: 0.85rem;
   } // p, li
 } // .feature
 
@@ -350,8 +359,6 @@ header a {
 
   // At the Top --------------------------------------------------
   #title {
-    //text-align: center;
-    //margin: 1em 0;
 
     .method-button {
       display: inline-block;
@@ -439,7 +446,8 @@ header a {
 
 // Features & Options Column --------------------------------------------------
 #fo-column {
-  //padding: 1em;
+  font-size: 0.8rem;
+  line-height: 1rem;
 
   #features-options {
     padding: 1em;
@@ -456,9 +464,7 @@ header a {
     } // h2
 
     ul {
-      font-size: 0.65rem;
       padding-left: 1.2em;
-      line-height: 0.8rem;
 
       li {
         margin-bottom: 0.5rem;
@@ -470,7 +476,7 @@ header a {
 // Text Notes --------------------------------------------------
 #text-notes {
   padding: 2em 1em 1em 1em;
-  font-size: 0.6em;
+  font-size: 0.9em;
   font-weight: bold;
 
   dt {
@@ -660,7 +666,7 @@ header a {
 .price-table__td {
   @extend %border-color-shared;
   font-family: font(mono);
-  font-size: 0.8em;
+  font-size: 0.9em;
 } // td, th
 
 .price-table--quantity {
@@ -668,13 +674,18 @@ header a {
 } // .price-table__quantity
 
 .price-table--charge {
-  font-size: 0.7em;
+  font-size: 0.8em;
 } // .price-table--charge
 
 .item-info__notes {
-  font-size: 0.6em;
+  font-size: 0.7em;
   line-height: 1em;
 } // .item-info__notes
+
+.svg-bullet {
+  position: relative;
+  bottom: 0.15em;
+} // .svg-bullet
 
 // Footer --------------------------------------------------
 footer {
