--- a/public/css/app.css
+++ b/public/css/app.css
@@ -11438,7 +11438,6 @@ header a {
 
 .item-info__price-table {
   border: 2px solid #9a161b;
-  table-layout: fixed;
 }
 
 .price-table__th,
@@ -11449,6 +11448,26 @@ header a {
 .price-table__th {
   font-family: proxima-nova-extra-condensed, Helvetica Neue, Helvetica, Arial, sans-serif;
   text-transform: uppercase;
+}
+
+.price-table__th.price-table--columns2 {
+  width: 50%;
+}
+
+.price-table__th.price-table--columns3 {
+  width: 33.33333333%;
+}
+
+.price-table__th.price-table--columns4 {
+  width: 25%;
+}
+
+.price-table__th.price-table--columns5 {
+  width: 20%;
+}
+
+.price-table__th.price-table--columns6 {
+  width: 16.66666667%;
 }
 
 .price-table__td {
@@ -11466,7 +11485,7 @@ header a {
 
 .item-info__notes {
   font-size: 0.7em;
-  line-height: 1em;
+  line-height: 1.2em;
 }
 
 .svg-bullet {
