--- a/resources/assets/sass/_layout.scss
+++ b/resources/assets/sass/_layout.scss
@@ -648,7 +648,7 @@ header a {
 
 .item-info__price-table {
   border: 2px solid color(accent-dark);
-  table-layout: fixed;
+  //table-layout: fixed; // Removed as it makes the Quantity column far too narrow on some tables.
 } // .item-info__price-table
 
 %border-color-shared {
@@ -660,7 +660,24 @@ header a {
   @extend %border-color-shared;
   font-family: font(headings);
   text-transform: uppercase;
-}
+
+  &.price-table--columns2 {
+    width: percentage(1/2);
+  } // &.price-table--columns2
+  &.price-table--columns3 {
+    width: percentage(1/3);
+  } // &.price-table--columns3
+  &.price-table--columns4 {
+    width: percentage(1/4);
+  } // &.price-table--columns4
+  &.price-table--columns5 {
+    width: percentage(1/5);
+  } // &.price-table--columns5
+  &.price-table--columns6 {
+    width: percentage(1/6);
+  } // &.price-table--columns6
+
+} // .price-table__th
 
 //noinspection CssNoGenericFontName
 .price-table__td {
@@ -679,7 +696,7 @@ header a {
 
 .item-info__notes {
   font-size: 0.7em;
-  line-height: 1em;
+  line-height: 1.2em;
 } // .item-info__notes
 
 .svg-bullet {
