--- a/resources/assets/sass/variables/_colors.scss
+++ b/resources/assets/sass/variables/_colors.scss
@@ -42,22 +42,23 @@ $colors: (
 
 // Gradients --------------------------------------------------
 $gradients: (
-  menu                : linear-gradient(map_get($colors, menu-stop1), map_get($colors, menu-stop2)),
-  sidebar             : linear-gradient(to bottom, lighten(map_get($colors, bg-abs), 30%), lighten(map_get($colors, bg-abs), 10%)),
-  accent-selected     : linear-gradient(to bottom, darken(map_get($colors, accent), 10%), darken(map_get($colors, accent), 20%)),
-  accent              : linear-gradient(to bottom, darken(map_get($colors, accent), 20%), darken(map_get($colors, accent), 30%)),
+  menu                : linear-gradient(color(menu-stop1), color(menu-stop2)),
+  sidebar             : linear-gradient(to bottom, lighten(color(bg-abs), 30%), lighten(color(bg-abs), 10%)),
+  accent-selected     : linear-gradient(to bottom, darken(color(accent), 10%), darken(color(accent), 20%)),
+  accent              : linear-gradient(to bottom, darken(color(accent), 20%), darken(color(accent), 30%)),
+  swatch-bg           : linear-gradient(to bottom, lighten(color(bg-abs), 20%), lighten(color(bg-abs), 10%)),
 
-  napkin              : linear-gradient(to bottom, map_get($colors, napkin-stop1), map_get($colors, napkin-stop2)),
-  coaster             : linear-gradient(map_get($colors, coaster-stop1), map_get($colors, coaster-stop2)),
-  stirpik             : linear-gradient(map_get($colors, stirpik-stop1), map_get($colors, stirpik-stop2)),
-  plate               : linear-gradient(map_get($colors, plate-stop1), map_get($colors, plate-stop2)),
-  cup                 : linear-gradient(map_get($colors, cup-stop1), map_get($colors, cup-stop2)),
-  utensil             : linear-gradient(map_get($colors, utensil-stop1), map_get($colors, utensil-stop2)),
+  napkin              : linear-gradient(to bottom, color(napkin-stop1), color(napkin-stop2)),
+  coaster             : linear-gradient(color(coaster-stop1), color(coaster-stop2)),
+  stirpik             : linear-gradient(color(stirpik-stop1), color(stirpik-stop2)),
+  plate               : linear-gradient(color(plate-stop1), color(plate-stop2)),
+  cup                 : linear-gradient(color(cup-stop1), color(cup-stop2)),
+  utensil             : linear-gradient(color(utensil-stop1), color(utensil-stop2)),
 
-  digital             : linear-gradient(to bottom, darken(map_get($colors, digital), 20%), darken(map_get($colors, digital), 30%)),
-  tradition           : linear-gradient(to bottom, darken(map_get($colors, tradition), 20%), darken(map_get($colors, tradition), 30%)),
-  hispeed             : linear-gradient(to bottom, darken(map_get($colors, hispeed), 20%), darken(map_get($colors, hispeed), 30%)),
-  digital-selected    : linear-gradient(to bottom, darken(map_get($colors, digital), 10%), darken(map_get($colors, digital), 20%)),
-  tradition-selected  : linear-gradient(to bottom, darken(map_get($colors, tradition), 10%), darken(map_get($colors, tradition), 20%)),
-  hispeed-selected    : linear-gradient(to bottom, darken(map_get($colors, hispeed), 10%), darken(map_get($colors, hispeed), 20%)),
+  digital             : linear-gradient(to bottom, darken(color(digital), 20%), darken(color(digital), 30%)),
+  tradition           : linear-gradient(to bottom, darken(color(tradition), 20%), darken(color(tradition), 30%)),
+  hispeed             : linear-gradient(to bottom, darken(color(hispeed), 20%), darken(color(hispeed), 30%)),
+  digital-selected    : linear-gradient(to bottom, darken(color(digital), 10%), darken(color(digital), 20%)),
+  tradition-selected  : linear-gradient(to bottom, darken(color(tradition), 10%), darken(color(tradition), 20%)),
+  hispeed-selected    : linear-gradient(to bottom, darken(color(hispeed), 10%), darken(color(hispeed), 20%)),
 );
