Imprint Color Choices Started
* Creates migrations, database tables, foreign keys, unique indexes, models, and BREAD for the two new pivot tables necessary to display imprint color choices on the product page.
* Adds some PHPDocs and other helpful comments.
* Fixes a few previous migrations.
* Formats a few files with Prettier.
* Slightly adjusts some CSS styling.
* Updates FontAwesome to 5.3.1.

--- a/resources/assets/sass/_layout.scss
+++ b/resources/assets/sass/_layout.scss
@@ -762,6 +762,7 @@ header a {
   width: 3rem;
   height: 3rem;
   border: 2px solid color(text);
+  margin: 1px;
   font-size: 0.75em;
   line-height: 1em;
   color: #ffffff;
