--- a/public/css/app.css
+++ b/public/css/app.css
@@ -11555,6 +11555,7 @@ header a {
   width: 3rem;
   height: 3rem;
   border: 2px solid #444444;
+  margin: 1px;
   font-size: 0.75em;
   line-height: 1em;
   color: #ffffff;
