Product Page Complete!
* Adds a tab to the swatches area for the various Imprint Types available for a given Product Line.
* Creates `ImprintType` model and migration, as well as its associated pivot table and all model relationships.
* Also creates `ImprintType` BREAD and associated relationships for Voyager.
* Styles the Imprint Type swatches to more closely match `acs-susy`.
* Only shows the Imprint Types if there are more than 2 for the Product Line.
* Renames some variables for clarity.
* Refactors other `ProductController` methods to economize actions.
* Formats a few files with Prettier.

Signed-off-by: Chris McGee <chris@chrismcgee.info>

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -11561,6 +11561,30 @@ header a {
   color: #ffffff;
 }
 
+.swatches__caption {
+  font-size: 0.75em;
+}
+
+.swatches__image {
+  width: 80px;
+  height: 80px;
+  border: 2px solid #444444;
+}
+
+@media (min-width: 768px) {
+  .swatches__image {
+    width: 100px;
+    height: 100px;
+  }
+}
+
+@media (min-width: 992px) {
+  .swatches__image {
+    width: 120px;
+    height: 120px;
+  }
+}
+
 footer p {
   text-align: center;
 }
