--- a/resources/assets/sass/_layout.scss
+++ b/resources/assets/sass/_layout.scss
@@ -840,6 +840,11 @@ header a {
   height: 95%;
 } // .thumbnail__img
 
+// Typefaces Page --------------------------------------------------
+.typefaces__name {
+  border-bottom: 1px solid color(accent);
+} // .typefaces__name
+
 // Footer --------------------------------------------------
 footer {
   p {
